--- a/src/deb/supervisor.conf
+++ b/src/deb/supervisor.conf
@@ -1,7 +1,7 @@
 [program:spellcheck-service]
 user = spellcheck-service
 directory = /opt/%(program_name)s
-command = /usr/bin/java -jar /opt/%(program_name)s/app.jar -DpropertiesFilePath=file:///opt/%(program_name)s/application.properties
+command = /usr/bin/java -Xmx300m -jar /opt/%(program_name)s/app.jar -DpropertiesFilePath=file:///opt/%(program_name)s/application.properties
 autostart = true
 autorestart = true
 stdout_logfile_backups=5
