Add environment variables to set language and locale.

--- a/src/deb/supervisor.conf
+++ b/src/deb/supervisor.conf
@@ -4,6 +4,7 @@ directory = /opt/%(program_name)s
 command = /usr/bin/java -Xmx300m -jar /opt/%(program_name)s/app.jar -DpropertiesFilePath=file:///opt/%(program_name)s/application.properties
 autostart = true
 autorestart = true
+environment=LANG="en_US.UTF-8",LC_ALL="en_US.UTF-8"
 stdout_logfile_backups=5
 stderr_logfile_backups=5
 stdout_logfile_maxbytes=10485760
