--- a/rest-service/pom.xml
+++ b/rest-service/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>spellcheck-service-parent</artifactId>
         <groupId>org.ihtsdo.otf</groupId>
-        <version>1.1.1-SNAPSHOT</version>
+        <version>1.1.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
