--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.ihtsdo.otf</groupId>
 	<artifactId>spellcheck-service-parent</artifactId>
-    <version>3.4.0</version>
+    <version>3.5.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
     <name>Spell Check Service</name>
