--- a/spellcheck-core/pom.xml
+++ b/spellcheck-core/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>spellcheck-service-parent</artifactId>
         <groupId>org.ihtsdo.otf</groupId>
-        <version>3.5.1</version>
+        <version>3.6.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>spellcheck-core</artifactId>
