--- a/rest-service/pom.xml
+++ b/rest-service/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>spellcheck-service-parent</artifactId>
         <groupId>org.ihtsdo.otf</groupId>
-        <version>3.7.0</version>
+        <version>3.8.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>spellcheck-service</artifactId>
